--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
 		/>
+		<link
+			rel="shortcut icon"
+			href="./src/assets/BrandingAssets-main/Brand/Logo.svg"
+			type="image/x-icon"
+		/>
 	</head>
 	<body>
 		<div id="modal"></div>
